bk_ida/gccida/g1/scan_rtx
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scan_rtx/src/regrename.c:1124:37: error: must use 'enum' tag to refer to type 'reg_class'
void  scan_rtx( rtx insn, rtx *loc, reg_class a3, scan_actions action, op_type type, int earlyclobber) 
                                    ^
                                    enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scan_rtx/src/regrename.c:1124:51: error: must use 'enum' tag to refer to type 'scan_actions'
void  scan_rtx( rtx insn, rtx *loc, reg_class a3, scan_actions action, op_type type, int earlyclobber) 
                                                  ^
                                                  enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scan_rtx/src/regrename.c:1124:72: error: must use 'enum' tag to refer to type 'op_type'
void  scan_rtx( rtx insn, rtx *loc, reg_class a3, scan_actions action, op_type type, int earlyclobber) 
                                                                       ^
                                                                       enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scan_rtx/src/regrename.c:1126:1: error: must use 'enum' tag to refer to type 'op_type'
op_type v8; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scan_rtx/src/regrename.c:1147:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( v9[1] ) 
^    ~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scan_rtx/src/regrename.c:1179:66: error: use of undeclared identifier 'machine_mode'
scan_rtx_address( insn, ( rtx *)v9->fld, GENERAL_REGS, action, ( machine_mode)*( ( unsigned __int8 *)v9 + 2)); 
                                                                 ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scan_rtx/src/obj/regrename.o] Error 1
